--- a/public/evaluate-performance.html
+++ b/public/evaluate-performance.html
@@ -14,6 +14,7 @@
         <nav>
             <ul>
                 <li><a href="/">HOME</a></li>
+                <li><a href="/audit-log.html">AUDIT LOG</a></li>
                 <li><a href="/register-vendor.html">REGISTER VENDOR</a></li>
                 <li><a href="/add-contract.html">ADD CONTRACT</a></li>
                 <li><a href="/vendor-directory.html">VENDOR DIRECTORY</a></li>
