--- a/public/permissions.html
+++ b/public/permissions.html
@@ -2,10 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Success</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Permissions Management</title>
     <link rel="stylesheet" href="css/styles.css">
-    <!-- Google Fonts -->
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <header class="headerabout">
@@ -17,21 +16,29 @@
                 <li><a href="/add-contract.html">ADD CONTRACT</a></li>
                 <li><a href="/vendor-directory.html">VENDOR DIRECTORY</a></li>
                 <li><a href="/evaluate-performance.html">EVALUATE PERFORMANCE</a></li>
+                <li><a href="/permissions.html">VIEWS</a></li>
             </ul>
         </nav>
-        <h1>Success</h1>
+        <h1>Permissions Functionalities</h1>
     </header>
 
     <section class="content">
-        <div class="option-card">
-            <h2>Success!</h2>
-            <p>Your submission was successful.</p>
-            <a href="/" class="button">Return Home</a>
+        <div class="form-container">
+            <h2>Permissions Functionalities</h2>
+            <div id="permissions-sections"></div>
+        </div>
+
+        <!-- Output Section for Results -->
+        <div id="output-section" class="output-container">
+            <h2>Results</h2>
+            <p>Click any Execute button to see results here.</p>
         </div>
     </section>
 
     <footer>
         <p>Vendor Management System</p>
     </footer>
+
+    <script src="js/permissions.js"></script>
 </body>
 </html>
