--- a/public/add-contract.html
+++ b/public/add-contract.html
@@ -12,11 +12,14 @@
         <nav>
             <ul>
                 <li><a href="/">HOME</a></li>
+                <li><a href="/login.html">LOG IN</a></li>
                 <li><a href="/audit-log.html">AUDIT LOG</a></li>
                 <li><a href="/register-vendor.html">REGISTER VENDOR</a></li>
                 <li><a href="/add-contract.html">ADD CONTRACT</a></li>
                 <li><a href="/vendor-directory.html">VENDOR DIRECTORY</a></li>
                 <li><a href="/evaluate-performance.html">EVALUATE PERFORMANCE</a></li>
+                <li><a href="/permissions.html">VIEWS</a></li>
+                <li><a href="/budget.html">BUDGET</a></li>
             </ul>
         </nav>
         <h1>Add New Contract</h1>
