--- a/public/vendor-directory.html
+++ b/public/vendor-directory.html
@@ -8,15 +8,21 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap" rel="stylesheet">
 </head>
 <body>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <header class="headerabout">
         <nav>
             <ul>
                 <li><a href="/">HOME</a></li>
+                <li><a href="/login.html">LOG IN</a></li>
                 <li><a href="/audit-log.html">AUDIT LOG</a></li>
                 <li><a href="/register-vendor.html">REGISTER VENDOR</a></li>
                 <li><a href="/add-contract.html">ADD CONTRACT</a></li>
                 <li><a href="/vendor-directory.html">VENDOR DIRECTORY</a></li>
                 <li><a href="/evaluate-performance.html">EVALUATE PERFORMANCE</a></li>
+                <li><a href="/permissions.html">VIEWS</a></li>
+                <li><a href="/budget.html">BUDGET</a></li>
             </ul>
         </nav>
         <h1>Vendor Directory</h1>
