--- a/public/evaluate-performance.html
+++ b/public/evaluate-performance.html
@@ -24,7 +24,6 @@
                 <li><a href="/add-contract.html">ADD CONTRACT</a></li>
                 <li><a href="/vendor-directory.html">VENDOR DIRECTORY</a></li>
                 <li><a href="/evaluate-performance.html">EVALUATE PERFORMANCE</a></li>
-                <li><a href="/permissions.html">VIEWS</a></li>
                 <li><a href="/budget.html">BUDGET</a></li>
             </ul>
         </nav>
@@ -34,7 +33,7 @@
     <section class="form-section">
         <div class="form-container">
             <h2>Performance Evaluation</h2>
-            <form id="performanceForm" action="/evaluate-performance" method="POST">
+            <form id="performanceForm">
                 <label for="VendorID">Vendor ID:</label>
                 <input type="text" id="VendorID" name="VendorID" autocomplete="off" required>
                 <div id="vendorSuggestions" class="suggestions"></div>
@@ -63,5 +62,27 @@
     </footer>
 
     <script src="js/script.js"></script>
+    <script>
+        document.addEventListener('DOMContentLoaded', () => {
+            const userRole = parseInt(localStorage.getItem('userRole'));
+            const navLinks = document.querySelectorAll('nav ul li');
+
+            if (!userRole) {
+                navLinks.forEach(link => {
+                    if (!link.querySelector('a').getAttribute('href').includes('login.html')) {
+                        link.style.display = 'none';
+                    }
+                });
+            } else {
+                navLinks.forEach(link => {
+                    const href = link.querySelector('a').getAttribute('href');
+                    if ((userRole === 3 && !href.includes('register-vendor.html')) ||
+                        (userRole === 5 && !href.includes('budget.html'))) {
+                        link.style.display = 'none';
+                    }
+                });
+            }
+        });
+    </script>
 </body>
 </html>
