--- a/public/register-vendor.html
+++ b/public/register-vendor.html
@@ -23,7 +23,6 @@
                 <li><a href="/add-contract.html">ADD CONTRACT</a></li>
                 <li><a href="/vendor-directory.html">VENDOR DIRECTORY</a></li>
                 <li><a href="/evaluate-performance.html">EVALUATE PERFORMANCE</a></li>
-                <li><a href="/permissions.html">VIEWS</a></li>
                 <li><a href="/budget.html">BUDGET</a></li>
             </ul>
         </nav>
@@ -33,7 +32,7 @@
     <section class="form-section">
         <div class="form-container">
             <h2>Vendor Registration</h2>
-            <form id="vendorForm" action="/register-vendor" method="POST">
+            <form id="vendorForm" action="/api/register-vendor" method="POST">
                 <label for="Name">Vendor Name:</label>
                 <input type="text" id="Name" name="Name" required>
 
@@ -58,5 +57,27 @@
     </footer>
 
     <script src="js/script.js"></script>
+    <script>
+        document.addEventListener('DOMContentLoaded', () => {
+            const userRole = parseInt(localStorage.getItem('userRole'));
+            const navLinks = document.querySelectorAll('nav ul li');
+
+            if (!userRole) {
+                navLinks.forEach(link => {
+                    if (!link.querySelector('a').getAttribute('href').includes('login.html')) {
+                        link.style.display = 'none';
+                    }
+                });
+            } else {
+                navLinks.forEach(link => {
+                    const href = link.querySelector('a').getAttribute('href');
+                    if ((userRole === 3 && !href.includes('register-vendor.html')) ||
+                        (userRole === 5 && !href.includes('budget.html'))) {
+                        link.style.display = 'none';
+                    }
+                });
+            }
+        });
+    </script>
 </body>
 </html>
