--- a/public/success.html
+++ b/public/success.html
@@ -23,7 +23,6 @@
                 <li><a href="/add-contract.html">ADD CONTRACT</a></li>
                 <li><a href="/vendor-directory.html">VENDOR DIRECTORY</a></li>
                 <li><a href="/evaluate-performance.html">EVALUATE PERFORMANCE</a></li>
-                <li><a href="/permissions.html">VIEWS</a></li>
                 <li><a href="/budget.html">BUDGET</a></li>
             </ul>
         </nav>
@@ -41,5 +40,27 @@
     <footer>
         <p>Vendor Management System</p>
     </footer>
+    <script>
+        document.addEventListener('DOMContentLoaded', () => {
+            const userRole = parseInt(localStorage.getItem('userRole'));
+            const navLinks = document.querySelectorAll('nav ul li');
+
+            if (!userRole) {
+                navLinks.forEach(link => {
+                    if (!link.querySelector('a').getAttribute('href').includes('login.html')) {
+                        link.style.display = 'none';
+                    }
+                });
+            } else {
+                navLinks.forEach(link => {
+                    const href = link.querySelector('a').getAttribute('href');
+                    if ((userRole === 3 && !href.includes('register-vendor.html')) ||
+                        (userRole === 5 && !href.includes('budget.html'))) {
+                        link.style.display = 'none';
+                    }
+                });
+            }
+        });
+    </script>
 </body>
 </html>
