--- a/public/register-vendor.html
+++ b/public/register-vendor.html
@@ -52,6 +52,15 @@
         </div>
     </section>
 
+    <div id="deleteModal" class="modal">
+        <div class="modal-content">
+            <span class="close">&times;</span>
+            <p>Are you sure you want to delete this vendor?</p>
+            <button id="confirmDelete" class="btn btn-danger">Delete</button>
+            <button id="cancelDelete" class="btn btn-secondary">Cancel</button>
+        </div>
+    </div>
+
     <footer>
         <p>Vendor Management System</p>
     </footer>
