--- a/public/vendor-directory.html
+++ b/public/vendor-directory.html
@@ -66,6 +66,17 @@
         </div>
     </div>
 
+    <!-- Delete Confirmation Modal -->
+    <div id="deleteModal" class="modal" style="display: none;">
+        <div class="modal-content">
+            <span id="closeDeleteModal">&times;</span>
+            <h2>Confirm Deletion</h2>
+            <p>Are you sure you want to delete this vendor?</p>
+            <button id="confirmDelete">Yes</button>
+            <button id="cancelDelete">No</button>
+        </div>
+    </div>
+
     <footer>
         <p>Vendor Management System</p>
     </footer>
